--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "hubot": "^2.9.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-docomo-dialogue": "https://github.com/bouzuya/hubot-docomo-dialogue/archive/master.tar.gz",
+    "hubot-docomochatter": "^0.1.1",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.2.0",
