--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
-    "hubot-youtube": "^1.0.2"
+    "hubot-youtube": "^1.0.2",
+    "request": "^2.72.0"
   },
   "engines": {
     "node": "0.10.x"
